corrected x overflow on mobile

--- a/public/style/land.css
+++ b/public/style/land.css
@@ -7,13 +7,15 @@ body{
     text-transform: uppercase;
     cursor: crosshair;
     font-size: 20px;
-    width: 100vw;
+   
     overflow-x: hidden;
+ 
 }
 nav{
     position: fixed;
     background-color: transparent;
     z-index: 5;
+    max-width: 100vw;
     
 }
 
@@ -322,6 +324,10 @@ input{
 }
 
 @media(max-width:767px){
+    body{
+        width: 100vw;
+        overflow-x: hidden;
+    }
 .card{
     background-color: #020202;
     /* height: 100%; */
@@ -332,6 +338,10 @@ input{
 
 
 @media screen and (max-height: 450px) {
+
+   .spn{
+       max-width: 100px;
+   }
     .overlay a {font-size: 20px}
     .overlay .closebtn {
       font-size: 40px;
